# structured-logger

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  crates.yml  publish.yml
examples/: async_log.rs  custom.rs  panic_log.rs  simple.rs
src/: async_json.rs  json.rs  lib.rs
tests/: test.rs
