[package]
name = "structured-logger"
version = "0.4.0"
edition = "2021"
description   = """
A logging implementation for the log crate that logs structured values as JSON (CBOR, or any other) into a file, stderr, stdout, or any other.
"""
authors       = ["0xzensh <txr1883@gmail.com>"]
license       = "MIT OR Apache-2.0"
documentation = "https://docs.rs/structured-logger"
repository    = "https://github.com/iorust/structured-logger"
readme        = "README.md"
keywords      = ["log", "structured", "json", "async", "stdout"]
include       = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE", "LICENSE-APACHE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default   = ["log-panic"]
log-panic = []

[dependencies]
log = { version = "0.4", features = ["kv_unstable_serde"], default-features = false }
parking_lot = { version = "0.12", optional = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", features = ["std"], default-features = false }
tokio = { version = "1", features = ["io-std", "io-util", "parking_lot", "sync", "rt"], default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }